--- a/cyber-warden/package.json
+++ b/cyber-warden/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.14.9",
     "@mui/x-data-grid": "^6.14.0",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
@@ -16,10 +17,11 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "next": "^13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
