--- a/cyber-warden/package.json
+++ b/cyber-warden/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mui/icons-material": "^5.14.9",
+    "@mui/x-charts": "^6.0.0-alpha.12",
     "@mui/x-data-grid": "^6.14.0",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
