--- a/cyber-warden/package.json
+++ b/cyber-warden/package.json
@@ -12,13 +12,16 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/x-charts": "^6.0.0-alpha.12",
     "@mui/x-data-grid": "^6.14.0",
+    "@nextui-org/react": "^2.1.13",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
     "next": "^13.4.19",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
