--- a/cyber-warden/package.json
+++ b/cyber-warden/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.2",
     "@mui/icons-material": "^5.14.9",
     "@mui/x-charts": "^6.0.0-alpha.12",
     "@mui/x-data-grid": "^6.14.0",
