--- a/cyber-warden/package.json
+++ b/cyber-warden/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.2",
     "@material-tailwind/react": "^2.1.2",
     "@mui/icons-material": "^5.14.9",
     "@mui/x-charts": "^6.0.0-alpha.12",
     "@mui/x-data-grid": "^6.14.0",
     "@nextui-org/react": "^2.1.13",
+    "@supabase/supabase-js": "^2.38.1",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "appwrite": "^13.0.0",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
@@ -28,7 +31,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
+    "supabase": "^1.106.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zod": "^3.22.4"
   }
 }
