--- a/cyber-warden/package.json
+++ b/cyber-warden/package.json
@@ -16,6 +16,7 @@
     "@mui/x-charts": "^6.0.0-alpha.12",
     "@mui/x-data-grid": "^6.14.0",
     "@nextui-org/react": "^2.1.13",
+    "@react-stately/data": "^3.10.3",
     "@supabase/supabase-js": "^2.38.1",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
