--- a/cyber-warden/package.json
+++ b/cyber-warden/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -16,24 +19,32 @@
     "@mui/x-charts": "^6.0.0-alpha.12",
     "@mui/x-data-grid": "^6.14.0",
     "@nextui-org/react": "^2.1.13",
+    "@prisma/client": "5.5.2",
     "@supabase/supabase-js": "^2.38.1",
-    "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "appwrite": "^13.0.0",
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
+    "fs": "0.0.1-security",
     "next": "^13.4.19",
+    "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
-    "supabase": "^1.106.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
+    "@types/node": "20.5.9",
+    "prisma": "^5.5.2",
+    "ts-node": "^10.9.1",
+    "typescript": "5.2.2"
   }
 }
