--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@mui/x-data-grid": "^6.14.0",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "5.5.2",
+    "@react-stately/data": "^3.10.3",
     "@supabase/supabase-js": "^2.38.1",
-    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "appwrite": "^13.0.0",
     "autoprefixer": "10.4.15",
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
     "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
     "prisma": "^5.5.2",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2"
