--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-data-grid": "^6.14.0",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "5.5.2",
+    "@react-stately/data": "^3.10.3",
     "@supabase/supabase-js": "^2.38.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
