ansible playbook page stuff :D

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/(authenticated)/scriptingHub/windowsActions/scriptData.ts", "src/app/(authenticated)/scriptingHub/linuxActions/scriptData.ts"],
   "exclude": ["node_modules"]
 }
