--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@mui/x-charts": "6.0.0-alpha.17",
     "@mui/x-data-grid": "^6.17.0",
     "@nextui-org/react": "^2.1.13",
-    "@prisma/client": "5.5.2",
+    "@prisma/client": "^5.5.2",
     "@react-stately/data": "^3.10.3",
     "@types/react-dom": "18.2.7",
     "appwrite": "^13.0.0",
@@ -37,6 +37,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
     "react-pro-sidebar": "1.1.0-alpha.1",
     "tailwindcss": "3.3.3",
     "zod": "^3.22.4"
