--- a/package.json
+++ b/package.json
@@ -30,17 +30,18 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
     "fs": "0.0.1-security",
-    "next": "^13.5.6",
+    "next": "13.4.3",
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.29",
+    "postcss": "^8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-pro-sidebar": "1.1.0-alpha.1",
     "tailwindcss": "3.3.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
