--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
     "fs": "0.0.1-security",
+    "json-formatter-js": "^2.3.4",
     "next": "13.4.3",
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
@@ -41,7 +42,7 @@
     "react-pro-sidebar": "1.1.0-alpha.1",
     "tailwindcss": "3.3.3",
     "zod": "^3.22.4",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
